2015-02-08  Jan Hubicka  <hubicka@ucw.cz>

	* ipa-polymorphic-call.c (ipa_polymorphic_call_context): Avoid ICE
	on getting VOID pointer.

2015-02-09  Jakub Jelinek  <jakub@redhat.com>

	PR target/64979
	* tree-stdarg.c (pass_stdarg::execute): Scan phi node args for
	va_list escapes.

2015-02-09  Richard Biener  <rguenther@suse.de>

	* genmatch.c (replace_id): Copy expr_type.

2015-02-09  Richard Biener  <rguenther@suse.de>

	* tree-streamer.h (streamer_pack_tree_bitfields): Remove.
	(streamer_write_tree_bitfields): Declare.
	* tree-streamer-in.c (unpack_ts_base_value_fields): Inline,
	properly unpack padding.
	(unpack_value_fields): Inline ...
	(streamer_read_tree_bitfields): ... here.
	* tree-streamer-out.c (pack_ts_base_value_fields): Inline
	and properly add padding bits.
	(streamer_pack_tree_bitfields): Fold into ...
	(streamer_write_tree_bitfields): ... this new function,
	exposing the bitpack object.
	* lto-streamer-out.c (lto_write_tree_1): Call
	streamer_write_tree_bitfields.

2015-02-09  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/54000
	* tree-ssa-looo-ivopts.c: Include tree-vectorizer.h.
	(struct ivopts_data): Add loop_loc member.
	(tree_ssa_iv_optimize_loop): Dump loop location.
	(create_new_ivs): Likewise, also dump number of IVs generated.

2015-02-09  Martin Liska  <mliska@suse.cz>

	* ipa-icf.c (sem_item_optimizer::register_hooks): Register hooks
	just if not yet registered.
	(ipa_icf_generate_summary): Register callgraph hooks.

2015-02-08  Andrew Pinski  <apinski@cavium.com>

	* config/aarch64/aarch64.c (gty_dummy): Delete.

2015-02-08  Jan Hubicka  <hubicka@ucw.cz>

	PR ipa/63566 
	* ipa-visibility.c (cgraph_node::non_local_p): Accept aliases.
	(cgraph_node::local_p): Remove thunk related FIXME.

2015-02-08  Jan Hubicka  <hubicka@ucw.cz>

	PR ipa/63566 
	* i386.c (ix86_function_regparm): Look through aliases to see if callee
	is local and optimized.
	(ix86_function_sseregparm): Likewise; also use target's SSE math